--- a/2_Replacing_your_LLM.ipynb
+++ b/2_Replacing_your_LLM.ipynb
@@ -10,13 +10,87 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd2afbf3-403d-49ec-8aad-e7d2e3932535",
+   "id": "ca985481",
    "metadata": {},
    "source": [
     "# Deploy and Learn ChatQnA using OPEA on Intel Tiber AI Cloud \n",
-    "## Replace your LLM model\n",
+    "## Replace your LLM model from your deployment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0891b72b",
+   "metadata": {},
+   "source": [
+    "# 📦 What Is a Helm Chart?\n",
     "\n",
-    "To deploy the `chatqna` application with a custom Hugging Face model (e.g., `deepseek-ai/DeepSeek-R1-Distill-Qwen-7B`), run the following command:"
+    "A **Helm chart** is a collection of YAML templates that describe Kubernetes resources. Helm makes it easy to package, configure, and deploy applications to Kubernetes clusters. It is the de facto standard for Kubernetes application deployment.\n",
+    "\n",
+    "Helm allows developers to:\n",
+    "- Define application components using templates\n",
+    "- Configure deployments using values files (`values.yaml`)\n",
+    "- Deploy applications with a single command\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0665ad60",
+   "metadata": {},
+   "source": [
+    "## 📦 Helm Chart Structure (OPEA GenAIInfra)\n",
+    "\n",
+    "This Helm chart is part of the [GenAIInfra](https://github.com/opea-project/GenAIInfra) repository, which provides infrastructure templates to deploy multiple OPEA blueprints on Kubernetes.\n",
+    "\n",
+    "For this example, we will be exploring ChatqnA blueprint. The `chatqna` chart defines the resources required to deploy an end-to-end RAG-based question-answering application using modular microservices (LLM backend, retriever service, data prep, etc.).\n",
+    "\n",
+    "```text\n",
+    "helm-charts/\n",
+    "└── chatqna/\n",
+    "    ├── Chart.yaml         # Chart metadata (e.g., name, version, description)\n",
+    "    ├── values.yaml        # Default configuration values for the chart\n",
+    "    ├── templates/         # Kubernetes resource templates\n",
+    "    │   ├── deployment.yaml    # Defines Pods, containers, and other resources for LLM, retriever, etc.\n",
+    "    │   ├── service.yaml       # Defines the networking setup and service exposure\n",
+    "    │   └── configmap.yaml     # Configuration settings injected as environment variables\n",
+    "    └── charts/            # Subcharts (if used, for nested Helm charts)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bd9f7c2",
+   "metadata": {},
+   "source": [
+    "## ⚙️ How to Customize a Helm Chart. \n",
+    "## Custom Configuration: `cpu-values.yaml`\n",
+    "\n",
+    "The `cpu-values.yaml` file is **not part of the Helm chart directory** itself ([`helm-charts/chatqna`](https://github.com/opea-project/GenAIInfra/tree/main/helm-charts/chatqna)), because it is meant to be a **user-provided override configuration**.\n",
+    "\n",
+    "### Why isn’t `cpu-values.yaml` inside the chart?\n",
+    "\n",
+    "Helm encourages a clean separation between:\n",
+    "- `values.yaml`: the default configuration that comes with the chart (e.g. default model, retriever backend, etc.).\n",
+    "- Custom override files: like `cpu-values.yaml`, these allow you to tailor deployments for specific environments (such as CPU-only machines or resource-constrained nodes) without editing the upstream chart.\n",
+    "\n",
+    "### Benefits of using `cpu-values.yaml`\n",
+    "\n",
+    "- Keeps the chart generic and reusable.\n",
+    "- Allows multiple profiles like:\n",
+    "  - `cpu-values.yaml` – for CPU-based deployments.\n",
+    "  - `gpu-values.yaml` – for GPU-enabled clusters.\n",
+    "  - `dev-values.yaml` – for development/test clusters.\n",
+    "- Makes upgrades and version tracking easier since your overrides are managed separately.\n",
+    "\n",
+    "To deploy using `cpu-values.yaml` and to change `chatqna` application with a custom Hugging Face model (e.g., `deepseek-ai/DeepSeek-R1-Distill-Qwen-7B`), run the following command:\n",
+    "\n",
+    "```bash\n",
+    "helm upgrade --install chatqna oci://ghcr.io/opea-project/charts/chatqna \\\n",
+    "  --set vllm.LLM_MODEL_ID=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B \\\n",
+    "  -f cpu-values.yaml\n"
    ]
   },
   {
@@ -30,306 +104,6 @@
     "  --set vllm.LLM_MODEL_ID=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B \\\n",
     "  -f cpu-values.yaml && kubectl logs -l app=chatqna --tail=50"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c205891a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7154870c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e49c4e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b5fec4e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e24a1468",
-   "metadata": {},
-   "source": [
-    "## 1. Update config map \n",
-    "\n",
-    "ConfigMaps are used to store configuration settings that your applications need to run. These settings can be environment variables, command-line arguments, or configuration files. By using ConfigMaps, you can update your application's configuration without rebuilding or redeploying your containers.\n",
-    "\n",
-    "✅ Benefits of Using ConfigMaps\n",
-    "\n",
-    "- Separation of Concerns: Keeps configuration separate from application code.​\n",
-    "- Easy Updates: Allows you to update configuration without redeploying your application.​\n",
-    "- Environment Specific Configurations: Facilitates different configurations for different environments (e.g., development, staging, production).​\n",
-    "- Dynamic Configuration: Enables applications to adapt to configuration changes in real-time.​\n",
-    "\n",
-    "To list all ConfigMaps in the current namespace:​​"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "bd54b617",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME                            DATA   AGE\n",
-      "chatqna-chatqna-ui-config       4      4d22h\n",
-      "chatqna-data-prep-config        20     4d22h\n",
-      "chatqna-nginx-config            7      4d22h\n",
-      "chatqna-retriever-usvc-config   19     4d22h\n",
-      "chatqna-tei-config              11     4d22h\n",
-      "chatqna-teirerank-config        11     4d22h\n",
-      "chatqna-vllm-config             11     4d22h\n",
-      "kube-root-ca.crt                1      25d\n"
-     ]
-    }
-   ],
-   "source": [
-    "!kubectl get configmaps"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f34749c",
-   "metadata": {},
-   "source": [
-    "This command updates the **LLM_MODEL_ID** from `meta-llama/Meta-Llama-3-8B-Instruct` to `deepseek-ai/DeepSeek-R1-Distill-Qwen-7B`, a multimodal large language model developed by Alibaba Cloud's Qwen team. ​"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "e8d886b9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "configmap/chatqna-vllm-config patched (no change)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!kubectl patch configmap chatqna-vllm-config -p '{\"data\": {\"LLM_MODEL_ID\": \"deepseek-ai/DeepSeek-R1-Distill-Qwen-7B\"}}'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d1430179",
-   "metadata": {},
-   "source": [
-    "## 2. Update the POD with the new model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6c1af566",
-   "metadata": {},
-   "source": [
-    "Check the current deployments\n",
-    "Run the following command to list all the deployments in your Kubernetes cluster:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "80f2685c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME                      READY   UP-TO-DATE   AVAILABLE   AGE\n",
-      "chatqna                   1/1     1            1           4d22h\n",
-      "chatqna-chatqna-ui        1/1     1            1           4d22h\n",
-      "chatqna-data-prep         1/1     1            1           4d22h\n",
-      "chatqna-nginx             1/1     1            1           4d22h\n",
-      "chatqna-redis-vector-db   1/1     1            1           4d22h\n",
-      "chatqna-retriever-usvc    1/1     1            1           4d22h\n",
-      "chatqna-tei               1/1     1            1           4d22h\n",
-      "chatqna-teirerank         1/1     1            1           4d22h\n",
-      "chatqna-vllm              1/1     1            1           4d22h\n"
-     ]
-    }
-   ],
-   "source": [
-    "!kubectl get deployments"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cf05daae",
-   "metadata": {},
-   "source": [
-    "This helps you confirm that the deployment (`chatqna-vllm` in this case) exists and is ready to be restarted."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "034125d8",
-   "metadata": {},
-   "source": [
-    "Restart the deployment to apply the new model without needing to manually delete pods. This command triggers a rolling restart, meaning Kubernetes will gracefully recreate the pods one by one, minimizing downtime."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "46637c1b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deployment.apps/chatqna-vllm restarted\n"
-     ]
-    }
-   ],
-   "source": [
-    "!helm upgrade --install chatqna oci://ghcr.io/opea-project/charts/chatqna --set vllm.LLM_MODEL_ID=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B -f cpu-values.yaml && kubectl logs -l app=chatqna --tail=50"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "775c9cc6",
-   "metadata": {},
-   "source": [
-    "**Note**:\n",
-    "Restarting the deployment ensures the new model files/configurations are picked up without needing to redeploy the entire application."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b1c24f73",
-   "metadata": {},
-   "source": [
-    "## 3. Check the new pods. \n",
-    "\n",
-    "After restarting, list all pods to verify the new pods are running:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "9cd7c64c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME                                       READY   STATUS    RESTARTS   AGE\n",
-      "chatqna-868d98c5bf-vb2bk                   1/1     Running   0          4d22h\n",
-      "chatqna-chatqna-ui-ffd74c8d8-j67gr         1/1     Running   0          41m\n",
-      "chatqna-data-prep-59849c8885-xn8pq         1/1     Running   0          4d22h\n",
-      "chatqna-nginx-6c855d856c-4nds9             1/1     Running   0          4d22h\n",
-      "chatqna-redis-vector-db-8566ffdb78-f8d62   1/1     Running   0          4d22h\n",
-      "chatqna-retriever-usvc-57c8c4c7d5-9rfrd    1/1     Running   0          4d22h\n",
-      "chatqna-tei-9c46456c7-z89lc                1/1     Running   0          4d22h\n",
-      "chatqna-teirerank-5d4c49cd8d-sq7jc         1/1     Running   0          4d22h\n",
-      "chatqna-vllm-58d8d9cf69-xtgb8              1/1     Running   0          11m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!kubectl get pods"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "661b107a-a55c-42ac-a59d-d4801cfffe92",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vLLM pod: chatqna-vllm-58d8d9cf69-xtgb8\n"
-     ]
-    }
-   ],
-   "source": [
-    "vllm_pod = !kubectl get pods --no-headers | grep chatqna-vllm | awk '{print $1}'\n",
-    "vllm_pod = vllm_pod[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e02eb2c0",
-   "metadata": {},
-   "source": [
-    "Look for the new pods related to your deployment (e.g., `chatqna-vllm-xxxx`)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bbf744d8",
-   "metadata": {},
-   "source": [
-    "Check environment variables inside the pod. Verify that the correct model environment variable (LLM_MODEL_ID) is set inside the running pod."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "17542dc2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulted container \"vllm\" out of: vllm, model-downloader (init)\n",
-      "meta-llama/Meta-Llama-3-8B-Instruct\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check you replaced the variable\n",
-    "!kubectl exec -it {vllm_pod} -- printenv LLM_MODEL_ID"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8ba1b3a9",
-   "metadata": {},
-   "source": [
-    "Confirm the model was correctly updated\n",
-    "Make sure that the `LLM_MODEL_ID` printed matches the model you intended to deploy.\n",
-    "If it doesn’t, double-check your deployment configuration and environment variable settings."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f98fc414-065e-49c1-a96a-34e5490578ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
