--- a/2_Replacing_your_LLM.ipynb
+++ b/2_Replacing_your_LLM.ipynb
@@ -41,23 +41,22 @@
    "id": "0665ad60",
    "metadata": {},
    "source": [
-    "## 📦 Helm Chart Structure (OPEA GenAIInfra)\n",
+    "## 📦 OPEA Helm Chart Structure (OPEA GenAIInfra)\n",
     "\n",
-    "This Helm chart is part of the [GenAIInfra](https://github.com/opea-project/GenAIInfra) repository, which provides infrastructure templates to deploy multiple OPEA blueprints on Kubernetes.\n",
+    "HELM charts are part of the [GenAIInfra](https://github.com/opea-project/GenAIInfra) repository, which provides infrastructure templates to deploy multiple OPEA blueprints on Kubernetes.\n",
     "\n",
     "For this example, we will be exploring ChatqnA blueprint. The `chatqna` chart defines the resources required to deploy an end-to-end RAG-based question-answering application using modular microservices (LLM backend, retriever service, data prep, etc.).\n",
     "\n",
     "```text\n",
     "helm-charts/\n",
     "└── chatqna/\n",
-    "    ├── Chart.yaml         # Chart metadata (e.g., name, version, description)\n",
-    "    ├── values.yaml        # Default configuration values for the chart\n",
-    "    ├── templates/         # Kubernetes resource templates\n",
-    "    │   ├── deployment.yaml    # Defines Pods, containers, and other resources for LLM, retriever, etc.\n",
-    "    │   ├── service.yaml       # Defines the networking setup and service exposure\n",
-    "    │   └── configmap.yaml     # Configuration settings injected as environment variables\n",
-    "    └── charts/            # Subcharts (if used, for nested Helm charts)\n",
-    "\n"
+    "    ├── Chart.yaml                  # Chart metadata (e.g., name, version, description)\n",
+    "    ├── values.yaml                 # Default configuration values for the chart\n",
+    "    ├── templates/                  # Kubernetes resource templates\n",
+    "    │   ├── deployment.yaml         # Defines Pods, containers, and other resources for LLM, retriever, etc.\n",
+    "    │   ├── service.yaml            # Defines the networking setup and service exposure\n",
+    "    ├── cpu-values.yaml          # ✅ Optional config file for CPU-only environments\n",
+    "    └── ...                      # ✅ Optional config file for multiple configurations\n"
    ]
   },
   {
@@ -66,31 +65,38 @@
    "metadata": {},
    "source": [
     "## ⚙️ How to Customize a Helm Chart. \n",
+    "\n",
+    "### ⚙️ cpu-values.yaml — CPU-Optimized Configuration\n",
+    "\n",
+    "The `cpu-values.yaml` file is a custom override used to configure the `chatqna` Helm chart to run efficiently on CPU-only infrastructure. This is particularly useful for developers working on local machines, CI/CD pipelines, or edge environments.\n",
+    "\n",
+    "This file overrides default values found in `values.yaml`.\n",
+    "\n",
+    "### 🔍 Key Overrides in `cpu-values.yaml`\n",
+    "\n",
+    "```yaml\n",
+    "vllm:\n",
+    "  LLM_MODEL_ID: meta-llama/Meta-Llama-3-8B-Instruct\n",
+    "  # Uncomment for DeepSeek models:\n",
+    "  # VLLM_CPU_KVCACHE_SPACE: 40\n",
+    "  # resources:\n",
+    "  #   requests:\n",
+    "  #     memory: 60Gi\n",
     "## Custom Configuration: `cpu-values.yaml`\n",
+    "```\n",
     "\n",
-    "The `cpu-values.yaml` file is **not part of the Helm chart directory** itself ([`helm-charts/chatqna`](https://github.com/opea-project/GenAIInfra/tree/main/helm-charts/chatqna)), because it is meant to be a **user-provided override configuration**.\n",
+    "The `cpu-values.yaml` file is **part of the Helm chart directory** itself ([`helm-charts/chatqna`](https://github.com/opea-project/GenAIInfra/tree/main/helm-charts/chatqna)), because it is meant to be a **user-provided override configuration**.\n",
     "\n",
-    "### Why isn’t `cpu-values.yaml` inside the chart?\n",
-    "\n",
-    "Helm encourages a clean separation between:\n",
-    "- `values.yaml`: the default configuration that comes with the chart (e.g. default model, retriever backend, etc.).\n",
-    "- Custom override files: like `cpu-values.yaml`, these allow you to tailor deployments for specific environments (such as CPU-only machines or resource-constrained nodes) without editing the upstream chart.\n",
-    "\n",
-    "### Benefits of using `cpu-values.yaml`\n",
+    "### Benefits of using specific configuration files.\n",
     "\n",
     "- Keeps the chart generic and reusable.\n",
     "- Allows multiple profiles like:\n",
     "  - `cpu-values.yaml` – for CPU-based deployments.\n",
-    "  - `gpu-values.yaml` – for GPU-enabled clusters.\n",
-    "  - `dev-values.yaml` – for development/test clusters.\n",
+    "  - `cpu-ollama-values.yaml` – for CPU-based deployments using Ollama as LLM.\n",
+    "  - `cpu-milvus-values.yaml` – for CPU-based deployments using Milvus as Vector DB.\n",
     "- Makes upgrades and version tracking easier since your overrides are managed separately.\n",
     "\n",
-    "To deploy using `cpu-values.yaml` and to change `chatqna` application with a custom Hugging Face model (e.g., `deepseek-ai/DeepSeek-R1-Distill-Qwen-7B`), run the following command:\n",
-    "\n",
-    "```bash\n",
-    "helm upgrade --install chatqna oci://ghcr.io/opea-project/charts/chatqna \\\n",
-    "  --set vllm.LLM_MODEL_ID=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B \\\n",
-    "  -f cpu-values.yaml\n"
+    "To deploy using `cpu-values.yaml` and to change `chatqna` application with a custom Hugging Face model (e.g., `deepseek-ai/DeepSeek-R1-Distill-Qwen-7B`), run the following command:"
    ]
   },
   {
@@ -103,6 +109,75 @@
     "!helm upgrade --install chatqna oci://ghcr.io/opea-project/charts/chatqna \\\n",
     "  --set vllm.LLM_MODEL_ID=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B \\\n",
     "  -f cpu-values.yaml && kubectl logs -l app=chatqna --tail=50"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c43d9353",
+   "metadata": {},
+   "source": [
+    "## 🚀 What Happens When You Run This Helm Command\n",
+    "\n",
+    "This Helm command installs (or upgrades) the `chatqna` application using the OPEA Helm chart hosted in GitHub Container Registry. Here's a breakdown of what happens step-by-step:\n",
+    "\n",
+    "### 1. 🧠 Loads the Helm Chart\n",
+    "The command pulls the `chatqna` Helm chart from: `oci://ghcr.io/opea-project/charts/chatqna`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22c27c9f",
+   "metadata": {},
+   "source": [
+    "\n",
+    "This chart includes Kubernetes manifests for deploying all required components such as:\n",
+    "- LLM (vLLM-based model serving)\n",
+    "- Retriever (e.g. Redis, Qdrant)\n",
+    "- Frontend and backend services\n",
+    "- ConfigMaps, Services, Deployments\n",
+    "\n",
+    "### 2. ⚙️ Applies Your CPU-Specific Overrides\n",
+    "It loads custom settings from your `cpu-values.yaml` file to optimize the deployment for CPU-based environments.\n",
+    "\n",
+    "Then it overrides/adds more specific values using `--set`:\n",
+    "\n",
+    "| Setting | Purpose |\n",
+    "|--------|---------|\n",
+    "| `vllm.LLM_MODEL_ID=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B` | Sets the LLM model to use. This is a compact, efficient model ideal for CPU inference. |\n",
+    "| `vllm.VLLM_CPU_KVCACHE_SPACE=40` | Reserves 40GB for vLLM's KV cache (used to speed up attention mechanisms during inference). |\n",
+    "| `vllm.resources.requests.memory=60Gi` | Requests 60GB of RAM for the pod running vLLM. This ensures Kubernetes schedules it with enough memory. |\n",
+    "\n",
+    "### 3. 🚢 Installs or Updates the Release\n",
+    "Helm will:\n",
+    "- Install the chart as a new release named `chatqna` (if not installed yet)\n",
+    "- Or **upgrade** the existing `chatqna` release with the new settings\n",
+    "\n",
+    "### 4. 📡 Starts the Pods\n",
+    "Kubernetes will:\n",
+    "- Pull the necessary Docker images (e.g. vLLM, retriever, UI)\n",
+    "- Allocate CPU and memory as specified\n",
+    "- Launch the containers\n",
+    "- Monitor readiness/liveness probes\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Result: ChatQnA is Live\n",
+    "\n",
+    "Once complete, you'll have the `chatqna` service running on your cluster with:\n",
+    "\n",
+    "- A **DeepSeek-based LLM** running via vLLM on CPU\n",
+    "- A retriever connected to your vector database (Redis/Qdrant)\n",
+    "- Optional frontend and backend endpoints available via service\n",
+    "\n",
+    "You can now access the application (e.g., via port-forward) or query the model via API.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🔍 Useful Follow-up Commands\n",
+    "\n",
+    "Check pod status:\n",
+    "```bash\n",
+    "kubectl get pods\n"
    ]
   }
  ],
