--- a/2_Replacing_your_LLM.ipynb
+++ b/2_Replacing_your_LLM.ipynb
@@ -108,7 +108,9 @@
    "source": [
     "!helm upgrade --install chatqna oci://ghcr.io/opea-project/charts/chatqna \\\n",
     "  --set vllm.LLM_MODEL_ID=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B \\\n",
-    "  -f cpu-values.yaml && kubectl logs -l app=chatqna --tail=50"
+    "  --set vllm.VLLM_CPU_KVCACHE_SPACE=40 \\\n",
+    "  --set vllm.resources.requests.memory=60Gi \\\n",
+    "  -f cpu-values.yaml"
    ]
   },
   {
