--- a/2_Replacing_your_LLM.ipynb
+++ b/2_Replacing_your_LLM.ipynb
@@ -106,6 +106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%cd /home/devcloud/GenAIExamples/ChatQnA/kubernetes/helm\n",
+    "\n",
     "!helm upgrade --install chatqna oci://ghcr.io/opea-project/charts/chatqna \\\n",
     "  --set vllm.LLM_MODEL_ID=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B \\\n",
     "  --set vllm.VLLM_CPU_KVCACHE_SPACE=40 \\\n",
