--- a/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
+++ b/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
@@ -1012,7 +1012,7 @@
     "What was Nike's revenue in 2023?\n",
     "```\n",
     "\n",
-    "![\"chatqna-ui-nke-revenue\"](./Images/opea_ui_nke_rev.png)\n",
+    "![\"chatqna-ui-nke-revenue\"](./Images/NIKE_REVENUE.png)\n",
     "\n",
     "The answer is correct again because we already indexed our knowledge base on the previous step.\n",
     "\n",
@@ -1022,7 +1022,7 @@
     "What is OPEA?\n",
     "```\n",
     "\n",
-    "![\"chatqna-ui-opea\"](./Images/chatqna_ui_opea.png)\n",
+    "![\"chatqna-ui-opea\"](./Images/opea_wrong.png)\n",
     "\n",
     "Notice that the initial answer provided by the chatbot is outdated or lacks specific information about OPEA. This is because OPEA is a relatively new project and wasn’t part of the dataset used to train the language model. Since most language models are static—they rely on data available at the time of training—they can’t automatically incorporate recent developments or information about new projects like OPEA.\n",
     "\n",
@@ -1030,7 +1030,7 @@
     "\n",
     "By uploading a new document or link, you're effectively expanding the chatbot's knowledge base to include the latest information, which helps improve the relevance and accuracy of the responses.\n",
     "\n",
-    "![\"chatqna-ui-upload\"](./Images/chatqna_ui_upload.png)\n",
+    "![\"chatqna-ui-upload\"](./Images/Attach_document.png)\n",
     "\n",
     "The deployment allows you to upload either a file or a site. For this case, use the OPEA site:\n",
     "- Click on the **upload icon** to open the right panel\n",
@@ -1040,11 +1040,11 @@
     "\n",
     "When the indexing completes, you'll see an icon added below the text box, labeled https://opea-project.github.io/latest/introduction/index.html \n",
     "\n",
-    "![\"chatqna-ui-upload-status\"](./Images/chatqna_ui_upload_status.png)\n",
+    "![\"chatqna-ui-upload-status\"](./Images/Document_uploaded.png)\n",
     "\n",
     "Ask *\"What is OPEA?\"* again to see the updated answer.\n",
     "\n",
-    "![\"chatqna-ui-opea-rag\"](./Images/chatqna_ui_opea_rag.png)\n",
+    "![\"chatqna-ui-opea-rag\"](./Images/what_is_opea.png)\n",
     "\n",
     "This time, the chatbot responds correctly based on the data it added to the prompt from the new source, the OPEA website.\n",
     "\n",
