--- a/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
+++ b/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
@@ -141,8 +141,8 @@
     }
    ],
    "source": [
-    "%cd /home/devcloud/GenAIExamples/ChatQnA/kubernetes/helm\n",
-    "!helm install chatqna oci://ghcr.io/opea-project/charts/chatqna --set global.HUGGINGFACEHUB_API_TOKEN=\"your_huggingface_key'\" -f cpu-values.yaml"
+    "%cd /home/devcloud/GenAI-Workshops/GenAIExamples/ChatQnA/kubernetes/helm\n",
+    "!helm install chatqna oci://ghcr.io/opea-project/charts/chatqna --set global.HUGGINGFACEHUB_API_TOKEN=\"your_huggingface_key\" -f cpu-values.yaml"
    ]
   },
   {
