--- a/2_Replacing_your_LLM.ipynb
+++ b/2_Replacing_your_LLM.ipynb
@@ -181,7 +181,19 @@
     "\n",
     "Check pod status:\n",
     "```bash\n",
-    "kubectl get pods\n"
+    "kubectl get pods\n",
+    "```\n",
+    "## ✅ Verifying That the Correct Model Is Running\n",
+    "\n",
+    "After deploying your Helm chart, you’ll want to ensure that the expected model is actually being served by the application. Here's how to confirm this:\n",
+    "\n",
+    "### 1. 📄 Check the Logs for the Model Name\n",
+    "\n",
+    "Run:\n",
+    "\n",
+    "```bash\n",
+    "kubectl logs -l app=chatqna -c llm --tail=100\n",
+    "```\n"
    ]
   }
  ],
