--- a/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
+++ b/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
@@ -320,7 +320,7 @@
    "id": "f2b9fd84",
    "metadata": {},
    "source": [
-    "1. Save your ngnix POD name. Copy your entire ngnix pod name from `kubectl get pods` and replace **chatqna-nginx-xxxxxxxx** in the following command:"
+    "1. Save your ngnix POD name dynamically: "
    ]
   },
   {
@@ -338,9 +338,13 @@
     }
    ],
    "source": [
-    "# Use your NGINX Pod Name\n",
+    "# Fetch the pod name dynamically\n",
     "nginx_pod = !kubectl get pods --no-headers | grep chatqna-nginx | awk '{print $1}'\n",
-    "NGINX_POD_NAME = nginx_pod\n",
+    "\n",
+    "# Assign the pod name to a variable\n",
+    "NGINX_POD_NAME = nginx_pod[0].strip()\n",
+    "\n",
+    "# Print the pod name\n",
     "print(f\"chatqna-nginx pod: {NGINX_POD_NAME}\")"
    ]
   },
@@ -417,7 +421,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl exec {NGINX_POD_NAME}-- \\\n",
+    "!kubectl exec {NGINX_POD_NAME} -- \\\n",
     "  curl -C - -O https://raw.githubusercontent.com/opea-project/GenAIComps/main/comps/third_parties/pathway/src/data/nke-10k-2023.pdf"
    ]
   },
@@ -436,8 +440,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl exec {NGINX_POD_NAME}-- \\\n",
-    "curl -X POST \"chatqna-data-prep:6007/v1/dataprep/ingest\" \\\n",
+    "!kubectl exec {NGINX_POD_NAME} -- \\\n",
+    "  curl -X POST \"chatqna-data-prep:6007/v1/dataprep/ingest\" \\\n",
     "     -H \"Content-Type: multipart/form-data\" \\\n",
     "     -F \"files=@./nke-10k-2023.pdf\""
    ]
@@ -562,20 +566,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Read the embedding\n",
+    "# 1. Embed question (as you did)\n",
     "embed_question = !kubectl exec {NGINX_POD_NAME} -- sh -c 'cat /tmp/embed.txt'\n",
-    "embed_question = embed_question[0].strip()  # Remove newlines, spaces\n",
+    "embed_question = embed_question[0].strip()\n",
     "\n",
-    "# 2. Build the curl command and save the output into a file\n",
+    "# 2. Safely create JSON inside the pod using printf\n",
     "cmd_save_similar_docs = f\"\"\"\n",
     "kubectl exec {NGINX_POD_NAME} -- sh -c '\n",
-    "similar_docs=$(curl -X POST chatqna-retriever-usvc:7000/v1/retrieval -d \"{{\\\\\"text\\\\\": \\\\\"test\\\\\", \\\\\"embedding\\\\\": {embed_question}}}\" -H \"Content-Type: application/json\");\n",
-    "echo \"$similar_docs\" > /tmp/similar_docs.json\n",
+    "  json=$(printf \"{{\\\\\\\"text\\\\\\\": \\\\\\\"test\\\\\\\", \\\\\\\"embedding\\\\\\\": {embed_question}}}\");\n",
+    "  curl -X POST chatqna-retriever-usvc:7000/v1/retrieval -H \"Content-Type: application/json\" -d \"$json\" > /tmp/similar_docs.json\n",
     "'\n",
     "\"\"\"\n",
     "\n",
-    "# 3. Show the saved file\n",
-    "!kubectl exec {NGINX_POD_NAME} -- sh -c 'cat /tmp/similar_docs.json'"
+    "# 3. Run the command\n",
+    "!{cmd_save_similar_docs}\n",
+    "\n",
+    "# 4. Now read the result\n",
+    "!kubectl exec {NGINX_POD_NAME} -- sh -c 'cat /tmp/similar_docs.json'\n"
    ]
   },
   {
@@ -640,6 +647,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Install jq on pod\n",
+    "!kubectl exec {NGINX_POD_NAME} -- apk add jq\n",
+    "\n",
+    "#Run the reranker\n",
+    "\n",
     "cmd_rerank = f\"\"\"\n",
     "kubectl exec {NGINX_POD_NAME} -- sh -c '\n",
     "# Check if the similar_docs.json file exists\n",
