--- a/2_Replacing_your_LLM.ipynb
+++ b/2_Replacing_your_LLM.ipynb
@@ -106,13 +106,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd /home/devcloud//GenAI-Workshops/GenAIExamples/ChatQnA/kubernetes/helm\n",
+    "%cd /home/devcloud/GenAI-Workshops/GenAIExamples/ChatQnA/kubernetes/helm\n",
     "\n",
     "!helm upgrade --install chatqna oci://ghcr.io/opea-project/charts/chatqna \\\n",
+    "  --set global.HUGGINGFACEHUB_API_TOKEN=\"your_huggingface_token\" \\\n",
     "  --set vllm.LLM_MODEL_ID=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B \\\n",
     "  --set vllm.VLLM_CPU_KVCACHE_SPACE=40 \\\n",
     "  --set vllm.resources.requests.memory=60Gi \\\n",
-    "  --set global.HUGGINGFACEHUB_API_TOKEN=\"your_Hugging_Face_token\" \\\n",
     "  -f cpu-values.yaml"
    ]
   },
