--- a/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
+++ b/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
@@ -778,7 +778,9 @@
    "source": [
     "In this section, you’ve gained insights into each component involved in a RAG application, including the megaservice, gateway, and individual microservices. By testing each microservice in the console, you’ve explored their functionalities and interactions within the overall architecture.\n",
     "\n",
-    "## Test the deployment and verify RAG workflow\n",
+    "## Test the deployment and verify RAG workflow \n",
+    "NOTE: This is step is only applicable for this workshop, in a regular scenario you will just access to your public IP Address\n",
+    "\n",
     "### Understand RAG and use the UI\n",
     "\n",
     "Now that you've verified all services are running, use the following commands to access the UI provided by the implementation. \n",
