--- a/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
+++ b/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
@@ -112,7 +112,7 @@
    "id": "6894a7c0-8e92-4f6f-8d35-efc891b8f00b",
    "metadata": {},
    "source": [
-    "## Deploy ChatQnA on Kubernetes Cluster with Xeon Node\n",
+    "### 1. Deploy ChatQnA on Kubernetes Cluster with Xeon Node\n",
     "\n",
     "To deploy ChatQnA on a Xeon node in a Kubernetes cluster, we will use [this Helm Chart](https://github.com/opea-project/GenAIExamples/blob/main/ChatQnA/kubernetes/helm/README.md). \n",
     "\n",
@@ -147,13 +147,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a62ee93e",
+   "metadata": {},
+   "source": [
+    "The application should take ~5 minutes to deploy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abb7fb58",
+   "metadata": {},
+   "source": [
+    "### 2.Examine the Cluster Resources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fde46684-0751-4bcd-ba49-1af7e1e21ef7",
    "metadata": {},
    "source": [
-    "The application should take ~5 minutes to deploy.\n",
-    "\n",
-    "## Examine the Cluster Resources\n",
-    "\n",
     "Once the application has been deployed, launch a new terminal session and use the following `kubectl` commands to verify the deployment was successful. "
    ]
   },
@@ -162,7 +174,7 @@
    "id": "12e1cf3a-199f-484e-9026-e642e26371a1",
    "metadata": {},
    "source": [
-    "### List all pods in the default namespace"
+    "#### 2.1 List all pods in the default namespace"
    ]
   },
   {
@@ -266,14 +278,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68218392-d499-4595-907a-108f33367215",
+   "id": "4fa34813",
    "metadata": {},
    "source": [
     "The command `kubectl get svc` is used to view the services in a Kubernetes cluster, which are like entry points for accessing your applications. Each service has a name (such as chatqna or chatqna-ui) that identifies it. Services can be exposed in different ways: for example, a ClusterIP service is only accessible within the cluster, while a NodePort service is accessible externally through a specific port on the node. The Cluster-IP is the internal address used by other parts of the system to reach the service. If the service were available from outside the cluster, you would see an External-IP, but in this case, it’s because these services are internal. The Ports column shows which network ports the service listens on, like 8888/TCP for chatqna or 80:30144/TCP for chatqna-nginx, indicating how traffic is directed to the service. Finally, the Age tells you how long the service has been running, which in this example is 12 hours for all listed services.\n",
     "\n",
-    "Now, let’s explore the architecture.\n",
-    "\n",
-    "## Microservices\n",
+    "Now, let’s explore the architecture."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e88e6e03",
+   "metadata": {},
+   "source": [
+    "### 3 Explore Microservices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "674e4746",
+   "metadata": {},
+   "source": [
     "\n",
     "Each microservice follows the following logic performing a task within the RAG flow:\n",
     "\n",
@@ -288,9 +313,15 @@
     "Preprompting\n",
     "In this step, the logic is to start from a document (Nike's revenue PDF), and do the preprocessing needed to make it ready to be stored in a database. As shown, this process primarily involves 3 microservices: `data preparation`, `embeddings` and `vector store`. Let's explore each microservice.\n",
     "\n",
-    "![\"opea-embedding\"](./Images/pre_flow.png)\n",
-    "\n",
-    "### Embedding Microservice (POD:chatqna-tei:80)\n",
+    "![\"opea-embedding\"](./Images/pre_flow.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68218392-d499-4595-907a-108f33367215",
+   "metadata": {},
+   "source": [
+    "#### 3.1 Embedding Microservice (POD:chatqna-tei:80)\n",
     "An **embedding** is a numerical representation of an object—such as a word, phrase, or document in a continuous vector space. In the context of natural language processing (NLP), embeddings represent words, sentences, or other pieces of text as a set of numbers (or a \"vector\") that capture their meaning, relationships, and context. By transforming text into this format, embeddings make it easier for machine learning models to understand and work with text data.\n",
     "\n",
     "For example, the following image shows how word embeddings represent words as points in a vector space based on their relationships. Words with similar meanings, like \"king\" and \"queen\" are closer together, and the embedding model captures these connections through vector arithmetic.\n",
@@ -391,18 +422,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d3dc9b2",
+   "metadata": {},
+   "source": [
+    "#### 3.2 Vector Database Microservice (POD:chatqna-redis-vector-db:80)\n",
+    "The Vector Database microservice is a crucial component in the RAG application as it stores and retrieves embeddings. This is especially useful in applications like ChatQnA (RAG), where relevant information must be retrieved quickly based on the user's query.\n",
+    "\n",
+    "**Using Redis as a Vector Database**\n",
+    "In this Task, you use Redis as the vector database. You can find all of the supported alternatives in the OPEA vector store repository \n",
+    "\n",
+    "A Vector Database (VDB) is a specialized database designed to store and manage high-dimensional vectors—numeric representations of data points like words, sentences, or images. In AI and machine learning, these vectors are typically embeddings, which capture the meaning and relationships of data in a format that algorithms can process efficiently, as we have shown before."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b49b6c47-7d62-4bec-b995-d67d03a6fd6c",
    "metadata": {},
    "source": [
-    "## Vector Database Microservice (POD:chatqna-redis-vector-db:80)\n",
-    "The Vector Database microservice is a crucial component in the RAG application as it stores and retrieves embeddings. This is especially useful in applications like ChatQnA (RAG), where relevant information must be retrieved quickly based on the user's query.\n",
-    "\n",
-    "### Using Redis as a Vector Database\n",
-    "In this Task, you use Redis as the vector database. You can find all of the supported alternatives in the OPEA vector store repository \n",
-    "\n",
-    "A Vector Database (VDB) is a specialized database designed to store and manage high-dimensional vectors—numeric representations of data points like words, sentences, or images. In AI and machine learning, these vectors are typically embeddings, which capture the meaning and relationships of data in a format that algorithms can process efficiently, as we have shown before.\n",
-    "\n",
-    "## Data Preparation Microservice(POD:chatqna-data-prep:6007)\n",
+    "#### 3.3 Data Preparation Microservice(POD:chatqna-data-prep:6007)\n",
     "The Dataprep Microservice is responsible for preparing data in a digestible format for the application, converting it to embeddings, using the embedding microservice, and loading it to the database. This service preprocesses/transforms the data, making sure it is clean, organized, and suitable for further processing.\n",
     "\n",
     "Specifically, this microservice receives data (such as documents), processes it by breaking it into chunks, sends it to the embedding microservice, and stores these vectors in the vector database. The microservice's functionality may depend on the specific vector database being used, as each database has its own requirements for data formatting\n",
@@ -495,10 +532,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec5c086-068f-42ab-9f94-0eece84f76b4",
+   "id": "097483bc",
    "metadata": {},
    "source": [
-    "## Prompting\n",
+    "### 4. Prompting\n",
     "Once the knowledge base is set up, you can begin interacting with the application by asking it context-specific questions. RAG plays a crucial role in ensuring the responses are accurate and grounded in relevant data.\n",
     "\n",
     "The process starts with the application retrieving the most relevant information from the knowledge base in response to the user's query. This step ensures the LLM has up-to-date and precise context to answer the user's query.\n",
@@ -507,9 +544,15 @@
     "\n",
     "Finally, you will see how the LLM utilizes the enriched prompt to generate a coherent and contextually accurate response. By leveraging RAG, the application effectively delivers answers that are tailored to the user's query, grounded in the most relevant and up-to-date information from the knowledge base.\n",
     "\n",
-    "The microservices involved in this stage are `embeddings`, `vector db`, `retriever`, `reranking` and finally the `LLM`.\n",
-    "\n",
-    "## Retriever Microservice (POD:chatqna-retriever-usvc:7000)\n",
+    "The microservices involved in this stage are `embeddings`, `vector db`, `retriever`, `reranking` and finally the `LLM`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec5c086-068f-42ab-9f94-0eece84f76b4",
+   "metadata": {},
+   "source": [
+    "#### 4.1 Retriever Microservice (POD:chatqna-retriever-usvc:7000)\n",
     "The Retriever Microservice locates the most relevant information within the knowledge base and returns similar documents to the user's question. It is designed to work with a number of back-end systems that store knowledge and provide APIs to retrieve data that (hopefully!) best matches the intent the user had when asking his or her question. Different knowledge bases provide different APIs for retrieving relevant information. Vector databases provide vector similarity for embeddings from the source documents and a vector embedding for the user's question. Graph databases use graph locality to find matches. Relational databases use string and regular expression matching to find matches.\n",
     "\n",
     "In this task, you use the Redis vector database and access the vector database through Redis retriever.\n",
@@ -628,9 +671,16 @@
     "}\n",
     "```\n",
     "\n",
-    "The application will use that information as context for prompting the LLM, but there is still one more step that you need to do to refine and check the quality of those retrieved documents: the `reranker`.\n",
+    "The application will use that information as context for prompting the LLM, but there is still one more step that you need to do to refine and check the quality of those retrieved documents: the `reranker`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8e395a9",
+   "metadata": {},
+   "source": [
     "\n",
-    "## Reranker Microservice (POD:chatqna-teirerank:80)\n",
+    "### 4.3 Reranker Microservice (POD:chatqna-teirerank:80)\n",
     "The Reranking Microservice, fueled by reranking models, is a straightforward yet immensely potent tool for semantic search. When provided with a query and a collection of documents, reranking swiftly reorders the documents based on their semantic relevance to the query, arranging them from most to least pertinent. This microservice significantly enhances overall accuracy. You will commonly use either a dense embedding model or a sparse lexical search index in a text retrieval system to retrieve relevant text documents based on the user's input. A reranking model improves the results by rearranging potential candidates into a final, optimized order.\n",
     "\n",
     "OPEA has [multiple options](https://github.com/opea-project/GenAIComps/tree/main/comps/rerankings) for re-rankers. For this lab, you'll use the Hugging Face TEI for re-ranking. It is the `chatqna-teirerank` microservice in your cluster.\n",
@@ -701,14 +751,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55595d8-c5e6-4da1-8180-d2f7d0e61376",
+   "id": "6edd6f0f",
    "metadata": {},
    "source": [
     "The server responds with a JSON array containing objects with two fields: index and score. This indicates how the snippets are ranked based on their relevance to the query: `{\"index\": 1, \"score\": 0.9699065}` means the first text (index 1) has a high relevance score of approximately 0.9699. `{\"index\": 0, \"score\": 0.7286148}`, `{\"index\": 2, \"score\": 0.59450954}`, `{\"index\": 3, \"score\": 0.18186143}` indicates that the other snippets (index 0, 2, and 3) have a much lower score.\n",
     "\n",
-    "Just the first will be used to prompt the LLM.\n",
-    "\n",
-    "## LLM microservice (POD:chatqna-vllm:80)\n",
+    "Just the first will be used to prompt the LLM."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c55595d8-c5e6-4da1-8180-d2f7d0e61376",
+   "metadata": {},
+   "source": [
+    "### 4.4 LLM microservice (POD:chatqna-vllm:80)\n",
     "The heart of the RAG application is the Large Language Model (LLM), which is the primary focus of your efforts. As mentioned in the introduction, you leverage RAG to enhance LLM performance.\n",
     "\n",
     "LLM offerings can generally be divided into two main categories: closed models and open source models that you can run locally. Each type has its own advantages and disadvantages. This microservice architecture provides the flexibility to choose between these models, accommodating a variety of LLMs that can be broadly classified as either closed or open source.\n",
@@ -773,19 +829,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "327e0e0b",
+   "metadata": {},
+   "source": [
+    "In this section, you’ve gained insights into each component involved in a RAG application, including the megaservice, gateway, and individual microservices. By testing each microservice in the console, you’ve explored their functionalities and interactions within the overall architecture."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4086014",
+   "metadata": {},
+   "source": [
+    "### 5. Test the deployment and verify RAG workflow \n",
+    "NOTE: This is step is only applicable for this workshop, in a regular scenario you will just access to your public IP Address"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b4c109cf-8ca1-48ee-a9dd-7f3eeab9412e",
    "metadata": {},
    "source": [
-    "In this section, you’ve gained insights into each component involved in a RAG application, including the megaservice, gateway, and individual microservices. By testing each microservice in the console, you’ve explored their functionalities and interactions within the overall architecture.\n",
     "\n",
-    "## Test the deployment and verify RAG workflow \n",
-    "NOTE: This is step is only applicable for this workshop, in a regular scenario you will just access to your public IP Address\n",
     "\n",
-    "### Understand RAG and use the UI\n",
+    "#### 5.1 Understand RAG and use the UI\n",
     "\n",
     "Now that you've verified all services are running, use the following commands to access the UI provided by the implementation. \n",
     "\n",
-    "### 1. Modify the `chatqna-chatqna-ui-config` with the VM number and public URL of your machine:\n",
+    "1. Modify the `chatqna-chatqna-ui-config` with the VM number and public URL of your machine:\n",
     "NOTE : This is step is only done when running a workshop on ITAC"
    ]
   },
@@ -812,7 +882,7 @@
    "id": "0e245338-2942-41fb-9e74-0270a2db6c67",
    "metadata": {},
    "source": [
-    "### 2. Delete the `chatqna-chatqna-ui-xxxxx` pod (Modify with `chatqna-chatqna-ui-xxxxx` with your pod name):"
+    "2. Delete the `chatqna-chatqna-ui-xxxxx` pod (Modify with `chatqna-chatqna-ui-xxxxx` with your pod name):"
    ]
   },
   {
@@ -885,7 +955,7 @@
    "id": "16c1b0af-e9b9-4d3c-bb2f-7f4bdc05a275",
    "metadata": {},
    "source": [
-    "### 3. Set up port forwarding to chatqna-nginx"
+    "3. Set up port forwarding to chatqna-nginx"
    ]
   },
   {
@@ -916,7 +986,7 @@
    "id": "69465a5c-2740-457c-ba0e-ab3e258701ad",
    "metadata": {},
    "source": [
-    "### 4. Get your machine's `VM_NUMBER` and `PUBLICURL`"
+    "4. Get your machine's `VM_NUMBER` and `PUBLICURL`"
    ]
   },
   {
@@ -959,7 +1029,7 @@
    "id": "aecd7e05-fad3-49b0-98a0-0683798d6b15",
    "metadata": {},
    "source": [
-    "### 5. Run the cell below to get the URL to access the ChatQnA UI\n",
+    "5. Run the cell below to get the URL to access the ChatQnA UI\n",
     "\n",
     "You’ll be accessing the chatbot UI through a browser using a URL formatted like this:\n",
     "\n",
