--- a/2_Replacing_your_LLM.ipynb
+++ b/2_Replacing_your_LLM.ipynb
@@ -188,13 +188,7 @@
     "\n",
     "After deploying your Helm chart, you’ll want to ensure that the expected model is actually being served by the application. Here's how to confirm this:\n",
     "\n",
-    "### 1. 📄 Check the Logs for the Model Name\n",
-    "\n",
-    "Run:\n",
-    "\n",
-    "```bash\n",
-    "kubectl logs -l app=chatqna -c llm --tail=100\n",
-    "```\n"
+    "### 1. 📄 Check the Logs using `k9s` in your console\n"
    ]
   }
  ],
